[package]
name = "dope"
description = "A lightweight kqueue executor"
license = "AGPL-3.0"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1"
futures = "0"
chrono = "0"
failure = "0"
libc = "0"
log = "0"
num-derive = "0"
num-traits = "0"
slab = "0"
